tests/negative/semantic/array_set_index_bool/input.ci
void main() {
    int[] xs = [1];
    arraySet(xs, true, 2);
}
